@startuml

interface UserModelApi {
  getId() : String
  setId(id : String, oid : String) : boolean
  getName() : String
  setName(name : String, id : String) : boolean
  getSex() : String
  setSex(sex : String, id : String) : boolean
  getAge() : int
  setAge(age : int, id : String) : boolean
}
class UserModel {
  - mId : String
  - mName : String
  - mSex : String
  - mAge : int
  + UserModel(id : String, name : String, sex : String, age : int)
  + getId() : String
  + setId(id : String, oid : String) : boolean
  + getName() : String
  + setName(name : String, id : String) : boolean
  + getSex() : String
  + setSex(sex : String, id : String) : boolean
  + getAge() : int
  + setAge(age : int, id : String) : boolean
}
class Proxy {
  基于UserModel动态生成的类
}
class DynamicProxy {
  - userModel : UserModel
  + getProxy(userModel : UserModel) : UserModelApi
  + invoke(proxy : Object, method : Method, args : Object[]) : Object
}

UserModelApi <|.. UserModel
UserModelApi <|. Proxy

DynamicProxy -> UserModel
Proxy -> DynamicProxy

Proxy <. DynamicProxy
Client ..> UserModelApi
Client .> DynamicProxy

@enduml